# sparse_be

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
sparse_be/: sparse_be.py  utils.py
tests/: test_sparse_be.py  test_sparse_be_matrix.py
