[build-system]
requires = ["setuptools", "wheel"]  # Tools needed to build your package
build-backend = "setuptools.build_meta"
[project]
name = "sparse_be"
version = "0.0.1"
description = "Python and Qiskit implementation of explicit quantum circuits for block encoding of certain sparse matrices."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICENCSE"]
dependencies = [
    "numpy>=1.21.0",
    "qiskit>=1.3.1"
]

[project.urls]
Homepage = "https://github.com/AlessandroZ94/sparse_be"
Issues = "https://github.com/AlessandroZ94/sparse_be/issues"